@@ -46,6 +46,24 @@ class useradd::sysconfig_init (
   Boolean              $autoswap          = false,
 ) {
 
+  if 'systemd' in $facts['init_systems'] {
+    $_unit_file_content = @("END")
+      [Service]
+      ExecStart=
+      ExecStart=-/bin/sh -c "${single_user_login}; /usr/bin/systemctl --fail --no-block default"
+      | END
+
+    systemd::dropin_file{ 'emergency_exec.conf':
+      unit    => 'emergency.service',
+      content => $_unit_file_content
+    }
+
+    systemd::dropin_file{ 'rescue_exec.conf':
+      unit    => 'rescue.service',
+      content => $_unit_file_content
+    }
+  }
+
   file { '/etc/sysconfig/init':
     ensure  => 'file',
     owner   => 'root',
